--- a/estilos/mediaquery.css
+++ b/estilos/mediaquery.css
@@ -14,7 +14,17 @@
 
 /*TABLET*/
 @media screen and(min-width:768px) and (max-width:992px){
-    
+    section > div {
+        width: 700px; /* Adicione uma unidade, por exemplo: pixels */
+        
+    }
+
+    button{
+        margin-top: 85px;
+    }
+    footer{
+        margin-top: 30px;
+    }
 }
 
 
